TP7-Types/tests/bad/t09.ml
(* Incohérence BOOL vs INT *)
let f (x: bool) : bool = x ;;
print_int (f true) ;;
